tests/fixtures/functional_patterns/negative/n42_mutex_lock.rs
use std::sync::Mutex;

fn increment_shared(counter: &Mutex<i32>) {
    let mut value = counter.lock().unwrap();
    *value += 1;
}
